change responsive setting

--- a/product.html
+++ b/product.html
@@ -59,8 +59,8 @@
     </div>
 
     <!-- Product cards -->
-    <div class="row row-cols-1 row-cols-md-3 g-4 product-card">
-      <div class="col">
+    <div class="row row-cols-1 row-cols-md-3 g-4 product-card">col-lg-4 col-md-6
+      <div class="col-lg-4 col-md-6">
         <div class="card h-100">
           <div class="top-product-name">
             <h5>Product 1</h5>
@@ -73,7 +73,7 @@
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="col-lg-4 col-md-6">
         <div class="card h-100">
           <div class="top-product-name">
             <h5>Product 2</h5>
@@ -86,7 +86,7 @@
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="col-lg-4 col-md-6">
         <div class="card h-100">
           <div class="top-product-name">
             <h5>Product 3</h5>
